tests/errors/Inconsistent2.hs
module Inconsistent2 where

{-@ foo :: Nat @-}
foo :: Bool
foo = True
